yaml/service-mesh-control-plane.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gwapi
---
# This due to bug about PILOT_ENABLE_GATEWAY_API_DEPLOYMENT_CONTROLLER so we can manually enable deployment creation
# This can be removed when https://issues.redhat.com/browse/OSSM-1846 is fixed
#apiVersion: rbac.authorization.k8s.io/v1
#kind: ClusterRoleBinding
#metadata:
#  name: serviceaccounts-cluster-admin
#roleRef:
#  apiGroup: rbac.authorization.k8s.io
#  kind: ClusterRole
#  name: cluster-admin
#subjects:
#- kind: ServiceAccount
#  name: istiod-istio-ingress
#  namespace: gwapi
#- kind: ServiceAccount
#  name: istio-ingressgateway-service-account
#  namespace: gwapi
