yaml/console-istioapi.yaml
# Create the ingress gateway
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: console-gateway
  namespace: istioapi
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      # TRICKY: Cert can only be in istio-system namespace!
      credentialName: default-credential
    hosts:
    - "${CONSOLE_ROUTE}"
---
# Create virtual service for console route
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: console
  namespace: istioapi
spec:
  hosts:
  - ${CONSOLE_ROUTE}
  gateways:
  - console-gateway
  http:
  - route:
    - destination:
        port:
          number: 443
        host: console.openshift-console.svc.cluster.local
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: console-istioapi
  namespace: openshift-console
spec:
  host: console.openshift-console.svc.cluster.local
  trafficPolicy:
    tls:
      mode: SIMPLE
