yaml/downloads-istioapi.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: downloads
  namespace: openshift-console
spec:
  hosts:
  - "downloads-openshift-console.apps.gspence-2022-05-11-0655.devcluster.openshift.com"
  gateways:
  - downloads-gateway
  #exportTo:
  #- "*"
  http:
  - route:
    - destination:
        port:
          number: 80
          #number: 8000
        host: downloads
        #host: httpbin.httpbin.svc.cluster.local
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: downloads-gateway
  namespace: openshift-console
spec:
  #exportTo:
  #- "*"
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "downloads-openshift-console.apps.gspence-2022-05-11-0655.devcluster.openshift.com"
