yaml/gwapi-features-examples.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: HTTPRoute
metadata:
  name: http-port-redirect
  namespace: gwapi
spec:
  parentRefs:
  - name: gateway
    namespace: gwapi
  hostnames: ["http-port-redirect.hf.${GWAPI_DOMAIN}"]
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: http
        port: 8000
---
# THIS DOESN'T WORK! It's for request headers, not response headers!
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: HTTPRoute
metadata:
  name: http-hsts
  namespace: gwapi
spec:
  parentRefs:
  - name: gateway
    namespace: gwapi
  hostnames: ["http-hsts.hf.${GWAPI_DOMAIN}"]
  rules:
  - filters:
    - type: RequestHeaderModifier
      requestHeaderModifier:
        add:
        - name: Test123
          value: test
    backendRefs:
    - name: nginx
      port: 8000
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: HTTPRoute
metadata:
  name: http-cookie
  namespace: gwapi
spec:
  parentRefs:
  - name: gateway
    namespace: gwapi
  hostnames: ["http-cookie.hf.${GWAPI_DOMAIN}"]
  rules:
  - backendRefs:
    - name: nginx-cookie
      port: 8000
---
apiVersion: v1
kind: Service
metadata:
  namespace: gwapi
  name: nginx-cookie
  labels:
    app: nginx
    service: nginx
spec:
  ports:
  - name: http
    port: 8000
    targetPort: 80
  selector:
    app: nginx
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: cookie
  namespace: gwapi
spec:
  host: nginx-cookie.gwapi.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      consistentHash:
        httpCookie:
          name: demo
          ttl: 0s
    connectionPool:
      http:
        idleTimeout: 5s
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: HTTPRoute
metadata:
  name: http-rewrite
  namespace: gwapi
spec:
  parentRefs:
  - name: gateway
    namespace: gwapi
  hostnames: ["http-rewrite.hf.${GWAPI_DOMAIN}"]
  rules:
  #- filters:
   # - type: URLRewrite
   #   urlRewrite:
   #     hostname: "http-rewrited.hf.${GWAPI_DOMAIN}"
  - backendRefs:
    - name: nginx
      port: 8000
---
